objects/Supplier_Brand_Association__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipName>Supplier_Brand_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SupplierBrandExt_ID__c</fullName>
        <externalId>true</externalId>
        <label>SupplierBrandExtID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Supplier Brand Associations</relationshipLabel>
        <relationshipName>Supplier_Brand_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Supplier Brand Assoc</label>
    <nameField>
        <label>Supplier Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Brand Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>